Bug : Fixed loading samples not being visible on screen and loading logic bug.
- When the samples were loading orignally, the "oops.." would appear

--- a/src/Pages/Sample.scss
+++ b/src/Pages/Sample.scss
@@ -1,3 +1,3 @@
-.error-message{
+.message{
     color: white;
 }
